syntax = "proto3";

package ru.sportvokrug.common.v1alpha1;

enum FigureSkatingContingent {
  CHILDREN = 0;
  ADULTS = 1;
}

enum FigureSkatingDisciplines {
  SINGLE = 0;
  PAIR = 1;
  SYNCHRONOUS = 2;
  DANCE = 3;
  COLLECTIVE = 4;
  OTHER = 5;
}